# msa-playground-py

./: .pre-commit-config.yaml  Dockerfile.base  README.md  docker-compose.yml  msa-playground-py.code-workspace  pyproject.toml
services/account/: Dockerfile  pyproject.toml
services/payment/: Dockerfile  pyproject.toml
