[tool.poetry]
name = "payment"
version = "0.1.0"
description = ""
authors = ["Flynn <wphestiraid@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
